# cppimagefilterbase

./: .gitignore  CMakeLists.txt  Configs.cpp  Configs.h  Filter.cpp  Filter.h  FilterBlur.cpp  FilterBlur.h  FilterEdge.cpp  FilterEdge.h  FilterIntensity.cpp  FilterIntensity.h  FilterNeighborhood.cpp  FilterNeighborhood.h  FilterRed.cpp  FilterRed.h  FilterThreshold.cpp  FilterThreshold.h  FilterThreshold2.cpp  FilterThreshold2.h  README.md  main.cpp  png_toolkit.cpp  png_toolkit.h
